--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,9 +30,31 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.autocomplete.jar=lib/autocomplete.jar
+file.reference.collections-generic-4.01.jar=lib/collections-generic-4.01.jar
+file.reference.colt-1.2.0.jar=lib/colt-1.2.0.jar
+file.reference.commons-math3-3.1.1.jar=../QuickP3D/lib/commons-math3-3.1.1.jar
+file.reference.concurrent-1.3.4.jar=lib/concurrent-1.3.4.jar
+file.reference.core.jar=../QuickP3D/lib/core.jar
+file.reference.gluegen-rt-natives-linux-amd64.jar=../QuickP3D/lib/gluegen-rt-natives-linux-amd64.jar
+file.reference.gluegen-rt.jar=../QuickP3D/lib/gluegen-rt.jar
 file.reference.idw-gpl.jar=lib/idw-gpl.jar
+file.reference.j3d-core-1.3.1.jar=lib/j3d-core-1.3.1.jar
+file.reference.jogl-all-natives-linux-amd64.jar=../QuickP3D/lib/jogl-all-natives-linux-amd64.jar
+file.reference.jogl-all.jar=../QuickP3D/lib/jogl-all.jar
 file.reference.js.jar=lib/js.jar
+file.reference.jung-3d-2.0.1.jar=lib/jung-3d-2.0.1.jar
+file.reference.jung-3d-demos-2.0.1.jar=lib/jung-3d-demos-2.0.1.jar
+file.reference.jung-algorithms-2.0.1.jar=lib/jung-algorithms-2.0.1.jar
+file.reference.jung-api-2.0.1.jar=lib/jung-api-2.0.1.jar
+file.reference.jung-graph-impl-2.0.1.jar=lib/jung-graph-impl-2.0.1.jar
+file.reference.jung-io-2.0.1.jar=lib/jung-io-2.0.1.jar
+file.reference.jung-jai-2.0.1.jar=lib/jung-jai-2.0.1.jar
+file.reference.jung-jai-samples-2.0.1.jar=lib/jung-jai-samples-2.0.1.jar
+file.reference.jung-samples-2.0.1.jar=lib/jung-samples-2.0.1.jar
+file.reference.jung-visualization-2.0.1.jar=lib/jung-visualization-2.0.1.jar
 file.reference.rsyntaxtextarea.jar=lib/rsyntaxtextarea.jar
+file.reference.vecmath-1.3.1.jar=lib/vecmath-1.3.1.jar
+file.reference.wstx-asl-3.2.6.jar=lib/wstx-asl-3.2.6.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -40,7 +62,31 @@ javac.classpath=\
     ${file.reference.autocomplete.jar}:\
     ${file.reference.idw-gpl.jar}:\
     ${file.reference.js.jar}:\
-    ${file.reference.rsyntaxtextarea.jar}
+    ${file.reference.rsyntaxtextarea.jar}:\
+    ${reference.CircuitSimulator.jar}:\
+    ${reference.QuickP3D.jar}:\
+    ${file.reference.core.jar}:\
+    ${file.reference.commons-math3-3.1.1.jar}:\
+    ${file.reference.gluegen-rt-natives-linux-amd64.jar}:\
+    ${file.reference.gluegen-rt.jar}:\
+    ${file.reference.jogl-all-natives-linux-amd64.jar}:\
+    ${file.reference.jogl-all.jar}:\
+    ${file.reference.jung-3d-2.0.1.jar}:\
+    ${file.reference.jung-3d-demos-2.0.1.jar}:\
+    ${file.reference.jung-algorithms-2.0.1.jar}:\
+    ${file.reference.jung-api-2.0.1.jar}:\
+    ${file.reference.jung-graph-impl-2.0.1.jar}:\
+    ${file.reference.jung-io-2.0.1.jar}:\
+    ${file.reference.jung-jai-2.0.1.jar}:\
+    ${file.reference.jung-jai-samples-2.0.1.jar}:\
+    ${file.reference.jung-samples-2.0.1.jar}:\
+    ${file.reference.jung-visualization-2.0.1.jar}:\
+    ${file.reference.colt-1.2.0.jar}:\
+    ${file.reference.concurrent-1.3.4.jar}:\
+    ${file.reference.vecmath-1.3.1.jar}:\
+    ${file.reference.wstx-asl-3.2.6.jar}:\
+    ${file.reference.collections-generic-4.01.jar}:\
+    ${file.reference.j3d-core-1.3.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -69,7 +115,11 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
+project.CircuitSimulator=../CircuitSimulator
+project.QuickP3D=../QuickP3D
 project.S3F=../S3F
+reference.CircuitSimulator.jar=${project.CircuitSimulator}/dist/CircuitSimulator.jar
+reference.QuickP3D.jar=${project.QuickP3D}/dist/QuickP3D.jar
 reference.S3F.jar=${project.S3F}/dist/S3F.jar
 run.classpath=\
     ${javac.classpath}:\
