Organizing the parsing algorithms (CircuitSim <--> Graph)

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -86,7 +86,8 @@ javac.classpath=\
     ${file.reference.vecmath-1.3.1.jar}:\
     ${file.reference.wstx-asl-3.2.6.jar}:\
     ${file.reference.collections-generic-4.01.jar}:\
-    ${file.reference.j3d-core-1.3.1.jar}
+    ${file.reference.j3d-core-1.3.1.jar}:\
+    ${reference.QuickP3D-1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -117,8 +118,10 @@ mkdist.disabled=false
 platform.active=default_platform
 project.CircuitSimulator=../CircuitSimulator
 project.QuickP3D=../QuickP3D
+project.QuickP3D-1=../../../QuickP3D
 project.S3F=../S3F
 reference.CircuitSimulator.jar=${project.CircuitSimulator}/dist/CircuitSimulator.jar
+reference.QuickP3D-1.jar=${project.QuickP3D-1}/dist/QuickP3D.jar
 reference.QuickP3D.jar=${project.QuickP3D}/dist/QuickP3D.jar
 reference.S3F.jar=${project.S3F}/dist/S3F.jar
 run.classpath=\
