--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,12 +35,23 @@ file.reference.colt-1.2.0.jar=lib/colt-1.2.0.jar
 file.reference.commons-math3-3.1.1.jar=../QuickP3D/lib/commons-math3-3.1.1.jar
 file.reference.concurrent-1.3.4.jar=lib/concurrent-1.3.4.jar
 file.reference.core.jar=../QuickP3D/lib/core.jar
-file.reference.gluegen-rt-natives-linux-amd64.jar=../QuickP3D/lib/gluegen-rt-natives-linux-amd64.jar
-file.reference.gluegen-rt.jar=../QuickP3D/lib/gluegen-rt.jar
+file.reference.gluegen-rt-natives-linux-amd64.jar-1=lib/gluegen-rt-natives-linux-amd64.jar
+file.reference.gluegen-rt-natives-linux-armv6.jar=lib/gluegen-rt-natives-linux-armv6.jar
+file.reference.gluegen-rt-natives-linux-armv6hf.jar=lib/gluegen-rt-natives-linux-armv6hf.jar
+file.reference.gluegen-rt-natives-linux-i586.jar=lib/gluegen-rt-natives-linux-i586.jar
+file.reference.gluegen-rt-natives-macosx-universal.jar=lib/gluegen-rt-natives-macosx-universal.jar
+file.reference.gluegen-rt-natives-windows-amd64.jar=lib/gluegen-rt-natives-windows-amd64.jar
+file.reference.gluegen-rt-natives-windows-i586.jar=lib/gluegen-rt-natives-windows-i586.jar
+file.reference.gluegen-rt.jar-1=lib/gluegen-rt.jar
 file.reference.idw-gpl.jar=lib/idw-gpl.jar
-file.reference.j3d-core-1.3.1.jar=lib/j3d-core-1.3.1.jar
-file.reference.jogl-all-natives-linux-amd64.jar=../QuickP3D/lib/jogl-all-natives-linux-amd64.jar
-file.reference.jogl-all.jar=../QuickP3D/lib/jogl-all.jar
+file.reference.jogl-all-natives-linux-amd64.jar-1=lib/jogl-all-natives-linux-amd64.jar
+file.reference.jogl-all-natives-linux-armv6.jar=lib/jogl-all-natives-linux-armv6.jar
+file.reference.jogl-all-natives-linux-armv6hf.jar=lib/jogl-all-natives-linux-armv6hf.jar
+file.reference.jogl-all-natives-linux-i586.jar=lib/jogl-all-natives-linux-i586.jar
+file.reference.jogl-all-natives-macosx-universal.jar=lib/jogl-all-natives-macosx-universal.jar
+file.reference.jogl-all-natives-windows-amd64.jar=lib/jogl-all-natives-windows-amd64.jar
+file.reference.jogl-all-natives-windows-i586.jar=lib/jogl-all-natives-windows-i586.jar
+file.reference.jogl-all.jar-1=lib/jogl-all.jar
 file.reference.js.jar=lib/js.jar
 file.reference.jung-3d-2.0.1.jar=lib/jung-3d-2.0.1.jar
 file.reference.jung-3d-demos-2.0.1.jar=lib/jung-3d-demos-2.0.1.jar
@@ -64,13 +75,8 @@ javac.classpath=\
     ${file.reference.js.jar}:\
     ${file.reference.rsyntaxtextarea.jar}:\
     ${reference.CircuitSimulator.jar}:\
-    ${reference.QuickP3D.jar}:\
     ${file.reference.core.jar}:\
     ${file.reference.commons-math3-3.1.1.jar}:\
-    ${file.reference.gluegen-rt-natives-linux-amd64.jar}:\
-    ${file.reference.gluegen-rt.jar}:\
-    ${file.reference.jogl-all-natives-linux-amd64.jar}:\
-    ${file.reference.jogl-all.jar}:\
     ${file.reference.jung-3d-2.0.1.jar}:\
     ${file.reference.jung-3d-demos-2.0.1.jar}:\
     ${file.reference.jung-algorithms-2.0.1.jar}:\
@@ -86,11 +92,27 @@ javac.classpath=\
     ${file.reference.vecmath-1.3.1.jar}:\
     ${file.reference.wstx-asl-3.2.6.jar}:\
     ${file.reference.collections-generic-4.01.jar}:\
-    ${file.reference.j3d-core-1.3.1.jar}:\
-    ${reference.QuickP3D-1.jar}
+    ${reference.QuickJOGL.jar}:\
+    ${file.reference.gluegen-rt-natives-linux-amd64.jar-1}:\
+    ${file.reference.gluegen-rt-natives-linux-armv6.jar}:\
+    ${file.reference.gluegen-rt-natives-linux-armv6hf.jar}:\
+    ${file.reference.gluegen-rt-natives-linux-i586.jar}:\
+    ${file.reference.gluegen-rt-natives-macosx-universal.jar}:\
+    ${file.reference.gluegen-rt-natives-windows-amd64.jar}:\
+    ${file.reference.gluegen-rt-natives-windows-i586.jar}:\
+    ${file.reference.gluegen-rt.jar-1}:\
+    ${file.reference.jogl-all-natives-linux-amd64.jar-1}:\
+    ${file.reference.jogl-all-natives-linux-armv6.jar}:\
+    ${file.reference.jogl-all-natives-linux-armv6hf.jar}:\
+    ${file.reference.jogl-all-natives-linux-i586.jar}:\
+    ${file.reference.jogl-all-natives-macosx-universal.jar}:\
+    ${file.reference.jogl-all-natives-windows-amd64.jar}:\
+    ${file.reference.jogl-all-natives-windows-i586.jar}:\
+    ${file.reference.jogl-all.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
+javac.external.vm=false
 javac.processorpath=\
     ${javac.classpath}
 javac.source=1.7
@@ -117,12 +139,10 @@ meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
 project.CircuitSimulator=../CircuitSimulator
-project.QuickP3D=../QuickP3D
-project.QuickP3D-1=../../../QuickP3D
+project.QuickJOGL=../../../../../andy/NetBeansProjects/QuickJOGL
 project.S3F=../S3F
 reference.CircuitSimulator.jar=${project.CircuitSimulator}/dist/CircuitSimulator.jar
-reference.QuickP3D-1.jar=${project.QuickP3D-1}/dist/QuickP3D.jar
-reference.QuickP3D.jar=${project.QuickP3D}/dist/QuickP3D.jar
+reference.QuickJOGL.jar=${project.QuickJOGL}/dist/QuickJOGL.jar
 reference.S3F.jar=${project.S3F}/dist/S3F.jar
 run.classpath=\
     ${javac.classpath}:\
